<?xml version="1.0"?>
<package format="2">
  <name>mbot_sensor</name>
  <version>0.0.0</version>
  <description>The mbot_sensor package</description>
  <maintainer email="1027537832@qq.com">zhangxin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>
</package>
